dream cording css Typography setting

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 :root {
     /* Color */
-
+    --color-black: black;
     /* Font Size  */
     --font-large: 48px;
     --font-medium: 28px;
@@ -19,4 +19,30 @@
 /* Universal tags */
 * {
     box-sizing: border-box;
+}
+
+/* Typography  */
+h1 {
+    font-size: var(--font-large);
+    font-weight: var(--weight-bold);
+    color: var(--color-black);
+    margin: 16px 0;
+}
+h2 {
+    font-size: var(--font-medium);
+    font-weight: var(--font-semi-bold);
+    color: var(--color-black);
+    margin: 8px 0;
+}
+h3 {
+    font-size: var(--font-regular);
+    font-weight: var(--font-regular);
+    color: var(--color-black);
+    margin: 8px 0;
+}
+p {
+    font-size: var(--font-regular);
+    font-weight: var(--font-regular);
+    color: var(--color-black);
+    margin: 4px 0;
 }
