--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
 :root {
     /* Color */
     --color-black: black;
+    --color-pink: pink;
+    --color-white: #ffffff;
+    --color-darkpink: #d86d6d;
     /* Font Size  */
     --font-large: 48px;
     --font-medium: 28px;
@@ -14,11 +17,28 @@
     --weight-semi-bold: 600;
     --weight-regular: 400;
     /* Size  */
+    --size--border-radius: 4px;
 }
 
 /* Universal tags */
 * {
     box-sizing: border-box;
+}
+body {
+    margin: 0;
+    font-family: "Open Sans", sans-serif;
+    cursor: default;
+}
+a {
+    text-decoration: none;
+    color: var(--color-white);
+}
+ul {
+    list-style: none;
+    padding-left: 0;
+}
+i {
+    color: white;
 }
 
 /* Typography  */
@@ -45,4 +65,34 @@ p {
     font-weight: var(--font-regular);
     color: var(--color-black);
     margin: 4px 0;
+}
+
+/* nav_bar */
+
+#navbar {
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--color-pink);
+    align-items: center;
+    padding: 16px;
+}
+.navbar__logo {
+    font-size: var(--font-medium);
+    font-weight: var(--weight-semi-bold);
+}
+
+.navbar__menu {
+    display: flex;
+}
+.navbar__menu__item {
+    padding: 8px 12px;
+    margin: 0 4px;
+    cursor: pointer;
+    border-radius: var(--size--border-radius);
+}
+.navbar__menu__item.active {
+    border: 1px solid var(--color-white);
+}
+.navbar__menu__item:hover {
+    background-color: var(--color-darkpink);
 }
