--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
     --color-grey: grey;
     --color-lightgrey: lightgrey;
     --color-orange: orange;
+    --color-light-white: #ededed;
     /* Font Size  */
     --font-large: 48px;
     --font-medium: 28px;
@@ -263,4 +264,96 @@ p {
     color: var(--color-white);
     font-weight: var(--weight-semi-bold);
     font-size: var(--font-small);
+}
+
+/* Work  */
+.work__categories {
+    justify-content: center;
+    margin: 40px;
+    padding: 10px 0;
+}
+.category__btn {
+    padding: 8px 48px;
+    border: 1px solid var(--color-grey);
+    border-radius: var(--size--border-radius);
+    font-size: var(--font-regular);
+}
+.category__btn.active,
+.category__btn:hover {
+    background: var(--color-pink);
+    border: 1px solid var(--color-grey);
+    border-radius: var(--size--border-radius);
+    color: var(--color-white);
+}
+.category__count {
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    line-height: 24px;
+    background: var(--color-orange);
+    border-radius: 50%;
+    position: relative;
+    top: -20px;
+    left: 4px;
+    opacity: 0;
+    transition: all 300ms ease-in;
+}
+.category__btn.active .category__count,
+.category__btn:hover .category__count {
+    opacity: 1;
+    top: 0;
+}
+
+.work__projects {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 1300px;
+    margin: auto;
+}
+.project {
+    background: var(--color-light-white);
+    width: 280px;
+    height: 250px;
+    margin: 2px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.project__img {
+    max-width: 100%;
+    max-height: 100%;
+}
+.project__description {
+    position: absolute;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    opacity: 0;
+    transform: translateY(10px);
+    transition: all 300ms ease-in;
+}
+.project__description h3 {
+    color: var(--color-white);
+}
+.project__description h3:after {
+    display: block;
+    content: "";
+    width: 25px;
+    height: 2px;
+    position: relative;
+    left: 50%;
+    margin-left: -12px;
+    margin-top: 8px;
+    background-color: var(--color-white);
+}
+.project:hover .project__description {
+    opacity: 0.8;
+    transform: translateY(0px);
 }
