--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,14 @@ p {
 .navbar__menu__item:hover {
     background-color: var(--color-darkpink);
 }
+.navbar__toggle-btn {
+    position: absolute;
+    right: 32px;
+    top: 24px;
+    font-size: 24px;
+    color: var(--color-white);
+    display: none;
+}
 
 /* Home  */
 #home {
@@ -395,7 +403,7 @@ p {
     background-color: var(--color-white);
     border-radius: var(--size--border-radius);
     flex-basis: 85%;
-    height: 150px;
+    /* height: 150px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -437,4 +445,40 @@ p {
 .contact__rights {
     padding-bottom: 40px;
     margin-bottom: 10px;
+}
+
+/* For below 768px screen width */
+
+@media screen and (max-width: 768px) {
+    .navbar__toggle-btn {
+        display: block;
+    }
+    #navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .navbar__menu {
+        flex-direction: column;
+        width: 100%;
+        display: none;
+    }
+    .navbar__toggle-btn i:hover .navbar__menu {
+        display: block;
+    }
+    .about__majors {
+        flex-direction: column;
+    }
+    .majors {
+        margin: 10px 0px;
+    }
+    .skillset {
+        flex-direction: column;
+    }
+    .project {
+        flex-grow: 1;
+    }
+    .testimonial__avatar {
+        width: 80px;
+        height: 80px;
+    }
 }
