--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
     /* Size  */
     --size--border-radius: 4px;
     /* Animation  */
-    --animation-duration: all 300ms ease;
+    --animation-duration: 300ms;
 }
 
 /* Universal tags */
@@ -97,10 +97,17 @@ p {
 
 #navbar {
     display: flex;
+    position: fixed;
+    width: 100%;
     justify-content: space-between;
-    background-color: var(--color-pink);
+    background-color: transparent;
     align-items: center;
     padding: 16px;
+    transition: all var(--animation-duration) ease-in-out;
+}
+#navbar.navbar--dark {
+    background-color: var(--color-pink);
+    padding: 8px;
 }
 .navbar__logo {
     font-size: var(--font-medium);
@@ -125,7 +132,7 @@ p {
 .navbar__toggle-btn {
     position: absolute;
     right: 32px;
-    top: 24px;
+    top: 14px;
     font-size: 24px;
     color: var(--color-white);
     display: none;
@@ -135,6 +142,7 @@ p {
 #home {
     background: url("/imgs/background_img.png") center/cover no-repeat;
     padding: 40px;
+    padding-top: 200px;
 }
 .home__avatar {
     width: 250px;
@@ -305,7 +313,7 @@ p {
     top: -20px;
     left: 4px;
     opacity: 0;
-    transition: all 300ms ease-in;
+    transition: all var(--animation-duration) ease-in;
 }
 .category__btn.active .category__count,
 .category__btn:hover .category__count {
@@ -346,7 +354,7 @@ p {
     justify-content: center;
     opacity: 0;
     transform: translateY(10px);
-    transition: all 300ms ease-in;
+    transition: all var(--animation-duration) ease-in;
 }
 .project__description h3 {
     color: var(--color-white);
@@ -440,7 +448,7 @@ p {
 .contact__link i:hover {
     transform: scale(1.1);
     color: var(--color-orange);
-    transition: all 300ms ease-in;
+    transition: all var(--animation-duration) ease-in;
 }
 .contact__rights {
     padding-bottom: 40px;
