--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,10 @@ p {
 #home {
     background: url("/imgs/background_img.png") center/cover no-repeat;
     padding: 40px;
-    padding-top: 200px;
+    padding-top: 300px;
+}
+.home__container {
+    opacity: 1;
 }
 .home__avatar {
     width: 250px;
