--- a/css/style.css
+++ b/css/style.css
@@ -350,6 +350,12 @@ p {
     flex-wrap: wrap;
     max-width: 1300px;
     margin: auto;
+    opacity: 1;
+    transition: all var(--animation-duration) ease-out;
+}
+.work__projects.anime-out {
+    opacity: 0.6;
+    transform: scale(0.9) translatey(40px);
 }
 .project {
     background: var(--color-light-white);
@@ -361,6 +367,11 @@ p {
     justify-content: center;
     align-items: center;
 }
+
+.project.invisible {
+    display: none;
+}
+
 .project__img {
     max-width: 100%;
     max-height: 100%;
