--- a/css/style.css
+++ b/css/style.css
@@ -138,12 +138,11 @@ p {
     margin: 0 4px;
     cursor: pointer;
     border-radius: var(--size--border-radius);
-}
-.navbar__menu__item.active {
-    border: 1px solid var(--color-white);
+    border: 1px solid transparent;
 }
 .navbar__menu__item:hover {
     background-color: var(--color-darkpink);
+    border: 1px solid var(--color-white);
 }
 .navbar__toggle-btn {
     position: absolute;
@@ -318,7 +317,7 @@ p {
     border-radius: var(--size--border-radius);
     font-size: var(--font-regular);
 }
-.category__btn.active,
+.category__btn.selected,
 .category__btn:hover {
     background: var(--color-pink);
     border: 1px solid var(--color-grey);
@@ -338,7 +337,7 @@ p {
     opacity: 0;
     transition: all var(--animation-duration) ease-in;
 }
-.category__btn.active .category__count,
+.category__btn.selected .category__count,
 .category__btn:hover .category__count {
     opacity: 1;
     top: 0;
