--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ p {
 .navbar__toggle-btn {
     position: absolute;
     right: 32px;
-    top: 14px;
+    top: 24px;
     font-size: 24px;
     color: var(--color-white);
     display: none;
@@ -390,16 +390,16 @@ p {
     transition: all var(--animation-duration) ease-in;
 }
 .project__description h3 {
-    color: var(--color-white);
+    color: var(--color-orange);
 }
 .project__description h3:after {
     display: block;
     content: "";
-    width: 25px;
+    width: 50px;
     height: 2px;
     position: relative;
     left: 50%;
-    margin-left: -12px;
+    transform: translateX(-50%);
     margin-top: 8px;
     background-color: var(--color-white);
 }
@@ -497,11 +497,19 @@ p {
     #navbar {
         flex-direction: column;
         align-items: flex-start;
+        background-color: var(--color-pink);
     }
     .navbar__menu {
         flex-direction: column;
         width: 100%;
         display: none;
+    }
+    #navbar.navbar--dark {
+        /* background-color: var(--color-pink); */
+        padding: 16px;
+    }
+    .navbar__menu.open {
+        display: block;
     }
     .navbar__toggle-btn i:hover .navbar__menu {
         display: block;
