--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ p {
 
 /* Home  */
 #home {
-    background: url("/imgs/background_img.png") center/cover no-repeat;
+    background: url("imgs/backgroundimg.png") center/cover no-repeat;
     padding: 40px;
     padding-top: 300px;
 }
